--- a/TinyStore/Product/Detail/TSProductDescriptionView.xib
+++ b/TinyStore/Product/Detail/TSProductDescriptionView.xib
@@ -16,20 +16,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85R-cL-xa0">
-                    <rect key="frame" x="16" y="0.0" width="343" height="36"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lW-K9-l9e">
-                    <rect key="frame" x="16" y="54" width="181" height="33.5"/>
+                    <rect key="frame" x="0.0" y="54" width="213" height="33.5"/>
                     <string key="text">Cum sociis nato penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Imx-P8-yrx">
-                    <rect key="frame" x="209" y="52" width="150" height="36"/>
+                    <rect key="frame" x="225" y="52" width="150" height="36"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="150" id="3hz-WL-IGz"/>
@@ -39,15 +39,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="6lW-K9-l9e" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="4Lp-4A-48n"/>
+                <constraint firstItem="6lW-K9-l9e" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4Lp-4A-48n"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="leading" secondItem="6lW-K9-l9e" secondAttribute="trailing" constant="12" id="9QE-7H-bE4"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="9ZG-Ij-LnV"/>
-                <constraint firstAttribute="trailing" secondItem="Imx-P8-yrx" secondAttribute="trailing" constant="16" id="CbL-cT-801"/>
+                <constraint firstAttribute="trailing" secondItem="Imx-P8-yrx" secondAttribute="trailing" id="CbL-cT-801"/>
                 <constraint firstItem="6lW-K9-l9e" firstAttribute="centerY" secondItem="Imx-P8-yrx" secondAttribute="centerY" id="Fu5-FJ-tg2"/>
                 <constraint firstItem="85R-cL-xa0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="GFO-2B-uN8"/>
                 <constraint firstItem="Imx-P8-yrx" firstAttribute="top" secondItem="85R-cL-xa0" secondAttribute="bottom" constant="16" id="doe-iy-ADJ"/>
-                <constraint firstAttribute="trailing" secondItem="85R-cL-xa0" secondAttribute="trailing" constant="16" id="exD-UM-C8i"/>
-                <constraint firstItem="85R-cL-xa0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="goz-Rl-nyx"/>
+                <constraint firstAttribute="trailing" secondItem="85R-cL-xa0" secondAttribute="trailing" id="exD-UM-C8i"/>
+                <constraint firstItem="85R-cL-xa0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="goz-Rl-nyx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Foc-zg-n0K"/>
