--- a/TinyStore/TSPrimaryButton.xib
+++ b/TinyStore/TSPrimaryButton.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UIPrimaryButton" customModule="TinyUI" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TSPrimaryButton" customModule="TinyUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="36"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -28,18 +28,27 @@
                         <constraint firstAttribute="height" constant="20" id="vef-rk-1MY"/>
                     </constraints>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghz-X5-MjT">
+                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="36"/>
+                    <state key="normal" title="Button"/>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="DL7-cc-hx8" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="BGE-PA-isS"/>
-                <constraint firstItem="9Jc-Ln-o17" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="LtD-CZ-vTY"/>
+                <constraint firstItem="9Jc-Ln-o17" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="LtD-CZ-vTY"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ghz-X5-MjT" secondAttribute="bottom" id="M6e-PW-69i"/>
+                <constraint firstAttribute="leading" secondItem="ghz-X5-MjT" secondAttribute="trailing" id="QtS-uo-KQK"/>
+                <constraint firstItem="ghz-X5-MjT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="e5W-PJ-fbI"/>
                 <constraint firstItem="9Jc-Ln-o17" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ePS-Nb-QCa"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DL7-cc-hx8" secondAttribute="trailing" constant="16" id="f8s-fZ-ng9"/>
                 <constraint firstItem="DL7-cc-hx8" firstAttribute="leading" secondItem="9Jc-Ln-o17" secondAttribute="trailing" constant="8" id="j82-rX-4mH"/>
+                <constraint firstItem="ghz-X5-MjT" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="l51-0k-nQA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="button" destination="ghz-X5-MjT" id="vO2-Be-hzc"/>
                 <outlet property="iconImageView" destination="DL7-cc-hx8" id="1Tl-86-Oe8"/>
                 <outlet property="titleLabel" destination="9Jc-Ln-o17" id="aLM-Pk-Uc6"/>
             </connections>
